# RGBLightControl

./: README.md
Documentation/: ATmega16-Fuses.txt  RGBLightControl.tex  uniinput.sty
Firmware/: colorcontrol.asm  colorspaces.asm  definition.inc  dimmer.asm  eeprom.asm  ioport.asm  main.asm  pwm.asm  statusled.asm  strings.asm  uart.asm
PCB/: RGBLightControl.brd  RGBLightControl.sch
Software/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac
Software/data/: Makefile.am  index.html
Software/include/: CAccelerometerMode.h  CAmbientLightMode.h  CBaseConfiguration.h  CBaseMessage.h  CColorspaceConverter.h  CConfiguration.h  CConstantLightMode.h  CDevice.h  CDisplayMode.h  CDreamboxGrabberDM8000.h  CI2CDevices.h  CI2CMaster.h  CI2CSlave.h  CImage.h  CImageGrabber.h  CImageReader.h  CLEDConfig.h  CMessage.h  CSequenceLightMode.h  CSystemTools.h  CThermometerMode.h  CWebserver.h  IDreamboxGrabber.h  Makefile.am  RGBLightControl.h  config.h
Software/src/: CAccelerometerMode.cpp  CAmbientLightMode.cpp  CBaseConfiguration.cpp  CBaseMessage.cpp  CConfiguration.cpp  CConstantLightMode.cpp  CDevice.cpp  CDisplayMode.cpp  CDreamboxGrabberDM8000.cpp  CI2CMaster.cpp  CImage.cpp  CImageGrabber.cpp  CImageReader.cpp  CLEDConfig.cpp  CMessage.cpp  CSequenceLightMode.cpp  CSystemTools.cpp  CThermometerMode.cpp  CWebserver.cpp  IDreamboxGrabber.cpp  Makefile.am  RGBLightControl.cpp  main.cpp
Software/src/webem/: _FOSSIL_  cWebem.cpp  cWebem.h  cWebemTable.cpp  cWebemTable.h  manifest  manifest.uuid  webem.fossil
Software/src/webem/doc/html/: annotated.html  c_webem_8h-source.html  classhttp_1_1server_1_1c_u_t_f-members.html  classhttp_1_1server_1_1c_u_t_f.html  classhttp_1_1server_1_1c_webem-members.html  classhttp_1_1server_1_1c_webem.html  classhttp_1_1server_1_1c_webem_request_handler-members.html  classhttp_1_1server_1_1c_webem_request_handler.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html
Software/src/webem/examples/WebemHello/: index.html
Software/src/webem/examples/webemCalendar/: SQLiteDatabase.cpp  index.html
Software/src/webem/examples/webemHelloForm/: ReadMe.txt  index.html
Software/src/webem/server/: request_handler.cpp
